--- a/src/components/TaskList/style.css
+++ b/src/components/TaskList/style.css
@@ -116,7 +116,6 @@ section.task-list header {
 
 main {
   margin-top: 2rem;
-  /*border-top: 1px solid var(--gray-300);*/
   border-radius: 8px;
 }
 
@@ -140,7 +139,7 @@ main ul li div {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1.5rem;
+  gap: 0.5rem;
   outline: 0;
 }
 
@@ -156,55 +155,66 @@ main ul li .completed p {
 }
 
 .checkbox-container {
+  display: block;
   position: relative;
-  margin-bottom: 0.5rem;
+  padding-left: 35px;
+  margin-bottom: 1.5rem;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  
 }
 
-.checkbox-container label {
-  border: 2px solid var(--blue);
-  border-radius: 50%;
+.checkbox-container input {
+  position: absolute;
+  opacity: 0;
   cursor: pointer;
-  height: 24px;
-  left: 0;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
   position: absolute;
   top: 0;
-  width: 24px;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  
+border-radius: 15px;
 }
 
-.checkbox-container label:hover {
-  border: 2px solid var(--blue-dark);
+.checkbox-container:hover input ~ .checkmark {
+  background-color: #ccc;
 }
 
-.checkbox-container label:after {
-  border: 2px solid #fff;
-  border-top: none;
-  border-right: none;
+.checkbox-container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+.checkmark:after {
   content: "";
-  height: 6px;
-  left: 4px;
-  opacity: 0;
   position: absolute;
-  top: 4px;
-  transform: rotate(-45deg);
-  width: 12px;
+  display: none;
 }
 
-.checkbox-container  input[type="checkbox"] {
-  visibility: hidden;
+.checkbox-container input:checked ~ .checkmark:after {
+  display: block;
 }
 
-.checkbox-container  input[type="checkbox"]:checked + label {
-  background: var(--purple-dark);
-  border-color: var(--purple-dark);
-}
-
-.checkbox-container  input[type="checkbox"]:checked + label:hover {
-  background: var(--purple);
-  border-color: var(--purple);
-}
-
-.checkbox-container  input[type="checkbox"]:checked + label:after {
-  opacity: 1;
+.checkbox-container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 main button {
@@ -220,82 +230,30 @@ main button svg:hover {
   color: var(--danger);
 }
 
-
-  /*
-
-          
-
-          &.completed {
-            p {
-              text-decoration:line-through;
-              opacity: 0.6;
-            }
-          }
-
-          .checkbox-container {
-            display: block;
-            position: relative;
-            padding-left: 14px;
-            margin-bottom: 18px;
-          
-            input {
-              position: absolute;
-              opacity: 0;
-              cursor: pointer;
-              height: 0;
-              width: 0;
-
-              &:checked {
-                & ~ .checkmark {
-                  background-color: var(--blue);
-                }
-
-                & ~ .checkmark:after {
-                  display: block;
-                }
-              } 
-            }
-          
-            .checkmark {
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 16px;
-              height: 16px;
-              background-color: var(--background);
-              border-radius: 2px;
-          
-              &:after {
-                content: "";
-                position: absolute;
-                display: none;
-                left: 6px;
-                top: 3px;
-                width: 3px;
-                height: 6px;
-                border: solid white;
-                border-width: 0 2px 2px 0;
-                transform: rotate(45deg);
-              }
-            }
-          }
-        }
-
-        button {
-          background: transparent;
-          border: 0;
-
-          svg {
-            color: var(--red);
-          }
-
-          &:hover {
-            svg {
-              filter: brightness(0.5)
-            }
-          }
-        }
-      }
-    } 
-  }
+/*Make Checkbox  of simple way*/
+/*
+.checkbox-container {
+  width:24px;
+  height: 24px;
+  border-radius: 50%;
+  vertical-align: middle;
+  border: 2px solid var(--blue);
+  appearance: none;
+  -webkit-appearance: none;
+  outline: none;
+  cursor: pointer;
 }
+
+.checkbox-container:hover {
+  border: 2px solid var(--blue-dark);
+}
+
+.checkbox-container:checked {
+  appearance: auto;
+  clip-path: circle(50% at 50% 50%);
+  background: var(--purple-dark);
+  border-color: var(--purple-dark);
+  opacity: 1;
+}
+
+.checkbox-container*/
