--- a/src/components/Transition/style.css
+++ b/src/components/Transition/style.css
@@ -1,4 +1,4 @@
-main {
+.clipboard-content {
   margin-top: 2rem;
   border-top: 1px solid var(--gray-300);
   border-radius: 8px;
@@ -10,20 +10,20 @@ main {
   align-items: center;
 }
 
-main img {
+.clipboard-content img {
   width: 56px;
   height: 56px;
   margin-bottom: 1rem;
 }
 
-main h1 {
+.clipboard-content h1 {
   font-size: 1rem;
   color: var(--gray-300);
   font-weight: 700;
   line-height: 1.4;
 }
 
-main p {
+.clipboard-content p {
   font-size: 1rem;
   color: var(--gray-300);
   font-weight: 400;
