--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -7,7 +7,7 @@ header.header div {
   max-width: 1120px;
   margin: 0 auto;
 
-  padding: 2rem 1rem 6rem;
+  padding: 0 1rem 4rem;
 
   display: flex;
   align-items: center;
