--- a/src/components/TaskList/style.css
+++ b/src/components/TaskList/style.css
@@ -201,19 +201,25 @@ main ul li .completed p {
   position: absolute;
   top: 0;
   left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-  
-border-radius: 15px;
+  height: 24px;
+  width: 24px;
+  background-color: transparent;
+  border: 2px solid var(--blue);
+  border-radius: 15px;
 }
 
 .checkbox-container:hover input ~ .checkmark {
-  background-color: #ccc;
+  border: 2px solid var(--blue-dark);
 }
 
 .checkbox-container input:checked ~ .checkmark {
-  background-color: #2196F3;
+  background-color: var(--purple-dark);
+  border: 2px solid var(--purple-dark);
+}
+
+.checkbox-container:hover input:checked ~ .checkmark {
+  background-color: var(--purple);
+  border: 2px solid var(--purple);
 }
 
 .checkmark:after {
@@ -227,11 +233,11 @@ border-radius: 15px;
 }
 
 .checkbox-container .checkmark:after {
-  left: 9px;
-  top: 5px;
+  left: 6px;
+  top: 2px;
   width: 5px;
   height: 10px;
-  border: solid white;
+  border: solid var(--white);
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
